--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -36,6 +36,7 @@ header{
 nav h1{
     color: #4E47FF;
     font-size: 34px;
+    font-weight: bolder;
     width: 99px;
     height: 51px;
     
@@ -135,3 +136,43 @@ header section{
         color: #000000;
     }
         
+    /* form styles */
+    .section3{
+    
+        width: 1140px ;
+        height: 632px;
+        margin: 92px 150px 14px 150px;
+        background-color:#D6DDED;
+    }
+    .div4{
+        margin-top: 71px;
+        margin-bottom: 71px;
+        gap:100px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .div4 h1{
+        font-size: 97px;
+        font-weight: bold;
+    }
+    .i1, .i2{
+        width: 497px;
+        height: 70px;
+        border-radius: 10px;
+        border: none;
+    }
+    .i3{
+        width: 497px;
+        height: 135px;
+        border-radius: 10px;
+        border: none;
+    }
+    .div4 button{
+        width: 497px;
+        height: 62px;
+        border-radius: 10px;
+        border: none;
+        color: #FFFFFF ;
+        background-color: #4E47FF;
+    }
