--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -176,3 +176,38 @@ header section{
         color: #FFFFFF ;
         background-color: #4E47FF;
     }
+    /* footer style */
+    .section4{
+        width: 1440px;
+        height: 428px;
+        background-color: #FFFFFF;
+        align-items: center;
+        text-align: center;
+        /* padding: 100px 450px; */
+    }
+    .section4 ul{
+        list-style: none;
+        display: flex;
+        justify-content: space-between;
+        padding-left: 520px;
+        padding-right: 520px;
+        margin-top: 0px;
+        color: #8987A1;
+        
+    }
+    .section4 li a{
+        text-decoration: none;
+    }
+    .section4 h1{
+        font-weight: bolder;
+        font-size: 100px;
+        color: #4E47FF;
+        margin-bottom: 0px;
+    }
+    .div5{
+        width: 530px;
+        height: 48px;
+        color: #8987A1;
+        padding-right: 450px;
+        padding-left: 450px;
+    }
