--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -221,4 +221,29 @@ header section{
     .section5{
         width: 1140px;
         height: 340px;
+        margin: 150px;
     }
+    .section5 h1{
+        text-align: center;
+        font-size: 42px;
+        font-weight: bold;
+        margin-bottom: 50px;
+        margin-top: 0px;
+    }
+      .div6{
+        display: flex;
+        gap: 20px;
+    
+      }
+
+    .div7{
+        width:360px ;
+        height:190px ;
+        background-color: #F2EDED;
+        padding: 24px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        border-radius: 10px;
+        
+    }
+    
